[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
rayon = "1.8"
derive-new = "0.6"
num = "0.4"
itertools = "0.12.0"
memoize = "0.4"
iset = "0.2"

colored = "2.0"

color-eyre = "0.6"

tracing = { version = "0.1", features = ["max_level_trace"] }
tracing-subscriber = "0.3"
tracing-test = "0.2"
log = "0.4.20"

[dev-dependencies]
rstest = {  version = "0.18", default-features = false }